# gnu_jcom

./: .gitignore  CMakeLists.txt  README.md  gnu_jcom.code-workspace
.github/workflows/: ci-release.yml
doc/: PRD.md
examples/: linear_demo_schema.json  sine_demo_schema.json  soc_proto_mcu_report_schema.json
qml/: Main.qml
src/: appcontroller.cpp  appcontroller.h  logmodel.cpp  logmodel.h  main.cpp  packetfieldmodel.cpp  packetfieldmodel.h  packetschema.cpp  packetschema.h  payloadcodec.cpp  payloadcodec.h  sendlistmodel.cpp  sendlistmodel.h
tests/: packetschema_test.cpp  payloadcodec_test.cpp
tools/: demo_device_main.cpp
